@@ -28,10 +28,13 @@ class Dialog_Partition_Copy : public Dialog_Base_Partition
 public:
 	Dialog_Partition_Copy( const FS & fs, Sector cylinder_size ) ;
 	void Set_Data( const Partition & selected_partition, const Partition & copied_partition );
-	Partition Get_New_Partition( ) ;
+
+	Partition Get_New_Partition() ;
+	Sector get_block_size() ;
 
 private:
-
+	Gtk::HBox hbox_block_size ;
+	Gtk::SpinButton spinbutton_block_size ;
 };
 
 }//GParted
