@@ -1,3 +1,14 @@
+2006-05-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/Dialog_Partition_Copy.h,
+	  include/GParted_Core.h,
+	  include/OperationCopy.h,
+	  include/Win_GParted.h,
+	  src/Dialog_Partition_Copy.cc,
+	  src/GParted_Core.cc,
+	  src/OperationCopy.cc,
+	  src/Win_GParted.cc: made blocksize settable by the user.
+
 2006-05-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/GParted_Core.cc: fixed typo (#343015)
